[package]
name = "rrelayer_cli"
version = "0.12.0"
edition = "2024"

[dependencies]
# internal dependencies
rrelayer_core = { path = "../core" }
rrelayer = { path = "../sdk" }

# external dependencies
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11"
regex = { workspace = true }
colored = "2.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
prettytable = "0.10.0"
chrono = { workspace = true }
hex = { workspace = true }
rpassword = "7.3"

alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore"] }

# build
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }
tikv-jemallocator = { version = "0.6.0", optional = true }
rand = { workspace = true }

[features]
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]