[package]
name = "rrelayer_core"
version = "0.12.0"
resolver = "2"
edition = "2021"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "Core types and functionality for rrelayer - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer_core"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../LICENSE"
]

[dependencies]
tokio-postgres = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712", "signer-keystore", "signer-aws", "json-rpc"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = { workspace = true }
rand_core = "0.6"
aws-sdk-secretsmanager = { version = "1.14.0", optional = true }
aws-sdk-kms = { version = "1.14.0", optional = true }
aws-sdk-sts = { version = "1.14.0", optional = true }
aws-config = { version = "1.1.4", optional = true }
base64 = { workspace = true }
chrono = { workspace = true }
bytes = "1.5.0"
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "time"] }
once_cell = "1.20.2"
native-tls = "0.2.12"
bb8 = "0.9"
bb8-postgres = "0.9"
postgres-native-tls = "0.5"
hex = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"] }
google-secretmanager1 = { version = "7.0", features = ["yup-oauth2-service-account"], optional = true }
yup-oauth2 = { version = "12", default-features = false, features = ["service-account", "hyper-rustls", "ring"], optional = true }
hyper-rustls = "0.27"
rustls = { version = "0.23.35", features = ["ring"]}
sha2 = { workspace = true, optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
tower = "0.5.2"
subtle = "2.6.1"
cryptoki = { version = "0.12", optional = true }
secrecy = {  version = "0.10", optional = true }
jsonwebtoken = { version = "10", optional = true }

[features]
default = ["gcp", "aws", "privy", "turnkey", "pkcs11", "fireblocks"]
gcp = ["dep:google-secretmanager1", "dep:yup-oauth2"]
aws = ["dep:aws-sdk-kms", "dep:aws-sdk-sts", "dep:aws-sdk-secretsmanager", "dep:aws-config", "alloy/signer-aws"]
privy = []
turnkey = ["dep:p256"]
pkcs11 = ["dep:cryptoki", "dep:secrecy"]
fireblocks = ["dep:jsonwebtoken", "dep:sha2"]
