[package]
name = "rrelayer"
version = "v0.11.7"
edition = "2024"
authors = ["joshstevens19@hotmail.co.uk"]
license = "MIT"
description = "The official Rust SDK for interacting with rrelayer services - a powerful blockchain transaction relay service"
homepage = "https://rrelayer.xyz"
repository = "https://github.com/joshstevens19/rrelayer"
documentation = "https://docs.rs/rrelayer"
readme = "README.md"
keywords = ["blockchain", "ethereum", "evm", "transaction", "relay"]
categories = ["api-bindings", "web-programming", "cryptography::cryptocurrencies"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../../LICENSE"
]

[dependencies]
reqwest = { workspace = true, features = ["native-tls", "cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true, features = ["full", "signer-mnemonic", "eips", "eip712"] }
base64 = { workspace = true }
rrelayer_core = { path = "../core", default-features = false }
tokio = { workspace = true, features = ["time"] }
async-trait = { workspace = true }
hex = { workspace = true }